# dopencl

./: CMakeLists.txt  COPYING.academic  INSTALL_Linux.txt  README  README_Linux.txt
daemon/: CMakeLists.txt
daemon/src/: CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Kernel.cpp  Kernel.h  Memory.cpp  Memory.h  Program.cpp  Program.h  Session.cpp  Session.h  dOpenCLd.cpp  dOpenCLd.h  main.cpp
daemon/src/command/: Command.h  CopyDataCommand.h  SetCompleteCommand.cpp  SetCompleteCommand.h
dclasio/: CMakeLists.txt
dclasio/doc/: Doxyfile.in
dclasio/include/CL/: README.txt  cl_wwu_collective.h  cl_wwu_collective.txt  cl_wwu_dcl.h  cl_wwu_dcl.txt
dclasio/include/dcl/: Binary.h  BlockingQueue.h  ByteBuffer.h  CLError.h  CLObjectRegistry.h  CommandListener.h  CommandQueue.h  CommandQueueListener.h  CommunicationManager.h  ComputeNode.h  ConnectionListener.h  Context.h  ContextListener.h  DCLException.h  DCLTypes.h  Daemon.h  DataTransfer.h  Device.h  Event.h  Host.h  Kernel.h  Memory.h  Process.h  Program.h  ProgramBuildListener.h  Remote.h  Session.h  SynchronizationListener.h  dcl.dox
dclasio/include/dcl/util/: Clock.h  Logger.h  README.txt
dclasio/include/dclasio/message/: BuildProgram.h  CommandMessage.h  CreateBuffer.h  CreateCommandQueue.h  CreateContext.h  CreateEvent.h  CreateKernel.h  CreateKernelsInProgram.h  CreateProgramWithBinary.h  CreateProgramWithSource.h  DeleteCommandQueue.h  DeleteContext.h  DeleteEvent.h  DeleteKernel.h  DeleteMemory.h  DeleteProgram.h  EnqueueBarrier.h  EnqueueBroadcastBuffer.h  EnqueueCopyBuffer.h  EnqueueMapBuffer.h  EnqueueMarker.h  EnqueueNDRangeKernel.h  EnqueueReadBuffer.h  EnqueueReduceBuffer.h  EnqueueUnmapBuffer.h  EnqueueWaitForEvents.h  EnqueueWriteBuffer.h  ErrorResponse.h  EventProfilingInfosResponse.h  EventSynchronizationMessage.h  FinishRequest.h  FlushRequest.h  GetEventProfilingInfos.h  GetKernelInfo.h  GetProgramBuildLog.h  InfoResponse.h  Message.h  ReleaseRequest.h  Request.h  Response.h  (+2 more)
dclasio/src/dcl/: ByteBuffer.cpp  CLError.cpp  CLObjectRegistry.cpp  DCLException.cpp  Remote.cpp
dclasio/src/dcl/util/: Clock.cpp  Logger.cpp
dclasio/src/dclasio/: CommunicationManager.cpp  CommunicationManagerImpl.cpp  CommunicationManagerImpl.h  ComputeNode.cpp  ComputeNodeCommunicationManagerImpl.cpp  ComputeNodeCommunicationManagerImpl.h  ComputeNodeImpl.cpp  ComputeNodeImpl.h  ContextListenerImpl.cpp  ContextListenerImpl.h  DCLAsioTypes.h  DeviceImpl.cpp  DeviceImpl.h  HostCommunicationManagerImpl.cpp  HostCommunicationManagerImpl.h  HostImpl.cpp  HostImpl.h  ProcessImpl.cpp  ProcessImpl.h  ProgramBuildListenerImpl.cpp  ProgramBuildListenerImpl.h  SmartCLObjectRegistry.cpp  SmartCLObjectRegistry.h
dclasio/src/dclasio/comm/: CLEventProcessor.cpp  CLEventProcessor.h  CLRequestProcessor.cpp  CLRequestProcessor.h  CLResponseProcessor.cpp  CLResponseProcessor.h  ConnectionListener.h  DataDispatcher.cpp  DataDispatcher.h  DataStream.cpp  DataStream.h  DataTransferImpl.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageListener.h  MessageQueue.cpp  MessageQueue.h  ResponseBuffer.cpp  ResponseBuffer.h
dclasio/src/dclasio/message/: BuildProgram.cpp  CommandMessage.cpp  ContextErrorMessage.h  CreateBuffer.cpp  CreateCommandQueue.cpp  CreateContext.cpp  CreateEvent.cpp  CreateKernel.cpp  CreateKernelsInProgram.cpp  CreateProgramWithSource.cpp  DeleteCommandQueue.cpp  DeleteContext.cpp  DeleteEvent.cpp  DeleteKernel.cpp  DeleteMemory.cpp  DeleteProgram.cpp  DeviceIDsResponse.h  DeviceInfosResponse.cpp  DeviceInfosResponse.h  EnqueueBarrier.cpp  EnqueueBroadcastBuffer.cpp  EnqueueCopyBuffer.cpp  EnqueueMapBuffer.cpp  EnqueueMarker.cpp  EnqueueNDRangeKernel.cpp  EnqueueReadBuffer.cpp  EnqueueReduceBuffer.cpp  EnqueueUnmapBuffer.cpp  EnqueueWaitForEvents.cpp  EnqueueWriteBuffer.cpp  ErrorResponse.cpp  EventProfilingInfosResponse.cpp  EventSynchronizationMessage.cpp  FinishRequest.cpp  FlushRequest.cpp  GetDeviceIDs.h  GetDeviceInfo.h  GetEventProfilingInfos.cpp  GetKernelInfo.cpp  InfoResponse.cpp  (+6 more)
icdpp/: CMakeLists.txt
icdpp/src/: CommandQueue.cpp  CommandQueue.h  ComputeNode.cpp  ComputeNode.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Kernel.cpp  Kernel.h  Memory.cpp  Memory.h  Platform.cpp  Platform.h  Program.cpp  Program.h  Retainable.cpp  Retainable.h  cl.cpp  cl_khr_icd.cpp  cl_khr_icd.h  cl_wwu_collective.cpp  cl_wwu_dcl.cpp
icdpp/src/dclicd/: Buffer.cpp  Buffer.h  Error.cpp  Error.h  Event.cpp  Event.h  utility.cpp  utility.h
icdpp/src/dclicd/command/: Command.cpp  Command.h  MappingCommand.cpp  MappingCommand.h  ReadWriteCommand.cpp  ReadWriteCommand.h  Readme.txt
icdpp/src/dclicd/detail/: ContextProperties.cpp  ContextProperties.h  EventProfilingInfo.cpp  EventProfilingInfo.h  KernelArgument.cpp  KernelArgument.h  KernelInfo.h  MappedMemory.h  ProgramBuild.cpp  ProgramBuild.h  ProgramBuildInfo.cpp  ProgramBuildInfo.h  Retainable.h
test/: CMakeLists.txt
test/include/boost/test/: parameterized_test_ex.hpp
test/src/: Buffer.cpp  CommandQueue.cpp  Context.cpp  Device.cpp  Event.cpp  Mapping.cpp  Memory.cpp  MemoryConsistency.cpp  Platform.cpp  Program.cpp  utility.cpp  utility.h
